# basic_resolver

./: CMakeLists.txt  README.md  resolver.cpp
